k8s-yml/backend/eks-be-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: eks-be-deploy
  name: eks-be-svc
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: eks-be-deploy
  type: ClusterIP
status:
  loadBalancer: {}
